--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,9 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+
+  font-family: var(--font-geist-sans), Arial, sans-serif;
+
   @apply font-description; /* Default font for body text */
 }
 
